# python-sdk

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: advanced_usage.py  basic_usage.py  error_handling.py
src/seeksphere/: __init__.py  client.py  exceptions.py  types.py
tests/: __init__.py  test_client.py  test_edge_cases.py  test_exceptions.py  test_integration.py  test_types.py
